--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
   "rules": {
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": ["error"],
-    "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }]
+    "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }],
+    "import/prefer-default-export": "off"
   },
   "settings": {
     "import/resolver": {
