--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/server.main.js"
+    "build": "rm -rf ./dist && tsc -p tsconfig.json",
+    "start": "node dist/infrastructure/server.main.js"
   },
   "repository": {
     "type": "git",
