--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
-    "start": "node dist/infrastructure/server.main.js"
+    "start": "node dist/server.main.js"
   },
   "repository": {
     "type": "git",
